--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Allura|Mr+Dafoe" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Allura|Mr+Dafoe" rel="stylesheet"/>
+<link href="/aliza/style.css" rel="stylesheet">
 
-  <style type="style-sheet">
-ul.poem li{line-height:39px;}
-  
-  
-  </style>
 </head>
 <body>
 <ul class="poem" style="list-style:none">
