--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
 </head>
 <body>
-<ul class="poem" style="list-style:none">
+
+</head>
+<body>
+<div class="center"> <ul style="list-style:none">
   <li>The butterfly is a thing to behold,</li>
 <li>with colors more beautiful than gold.</li>
 
@@ -18,7 +21,26 @@
 <li>as I sit and watch you flutter by.</li>
   </ul>
   
+  </div>
+  <div class="center">
+  <div class="container">
+    <div class="heart anim1">&hearts;</div>
+  </div>
+  <div class="container">
+    <div class="heart anim2">&hearts;</div>
+  </div>
+  <div class="container">
+    <div class="heart anim3">&hearts;</div>
+  </div>
+    <div class="container">
+    <div class="heart anim4">&hearts;</div>
+  </div>
+</div>
+<div class="center">
+  <p class="valentines">Aliza Nawaz</p>
+  <p>Dedicated with &hearts; by<span class="jk">Junaid Khalid</span><p>
+</div>
 
 
- 
+
 </body></html>
